--- a/db/stack.yml
+++ b/db/stack.yml
@@ -3,6 +3,7 @@ version: "3.1"
 
 services:
   db:
+    platform: linux/x86_64
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
