--- a/quizngaged/package.json
+++ b/quizngaged/package.json
@@ -12,9 +12,12 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
+    "axios": "^0.25.0",
+    "firebase": "^9.6.4",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
