--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
   }
