Tsk 006 test pscale access

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^14.3.2",
+    "express": "^4.17.2",
+    "firebase-admin": "^10.0.2",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
     "mysql": "^2.18.1",
