TSK-009 UI can now talk to backend and DB - first draft

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,16 @@
   "devDependencies": {
     "node-loader": "^2.0.0"
   },
+  "scripts": {
+    "servers": "node static-frontend-server.js && node APIServer.js",
+    "APIServer": "node APIServer.js",
+    "APIServer.js": "node APIServer.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
-    "firebase-admin": "^10.0.2",
-    "express": "^4.17.2",
-    "firebase-admin": "^10.0.2",
+    "firebase-admin": "^10.0.2",    
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
