--- a/db/docker-compose-ubuntu.yml
+++ b/db/docker-compose-ubuntu.yml
@@ -12,8 +12,8 @@ services:
       - dbdata:/var/lib/mysql
     ports:
       - 3306:3306
-    environment:
-      MYSQL_ROOT_PASSWORD: Test1234
+    environment:      
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: appdb
       MYSQL_USER: appuser
       MYSQL_PASSWORD: password
