--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
+    "@mui/styles": "^5.3.0",
     "axios": "^0.25.0",
     "firebase": "^9.6.4",
     "next": "12.0.8",
