TSK-027: updates to READMEs for db and backend, package.json scripts for both folders updated with valid scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   },
   "scripts": {
     "servers": "node static-frontend-server.js && node APIServer.js",
-    "APIServer": "node APIServer.js",
-    "APIServer.js": "node APIServer.js"
+    "API": "node APIServer.js",
+    "APIServer": "node APIServer.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
