--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "node_modules/.bin/mocha"
+    "test": "node_modules/.bin/mocha",
+    "cypress_test": "cypress open"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -17,13 +18,13 @@
     "axios": "^0.25.0",
     "chai": "^4.3.6",
     "firebase": "^9.6.4",
-    "mocha": "^9.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
+    "cypress": "^9.4.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8"
   }
