--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "node_modules/.bin/mocha"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -14,7 +15,9 @@
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.3.0",
     "axios": "^0.25.0",
+    "chai": "^4.3.6",
     "firebase": "^9.6.4",
+    "mocha": "^9.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
