--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-firebaseui": "^6.0.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.2",
     "cypress": "^9.4.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8"
