--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/styles": "^5.3.0",
     "axios": "^0.25.0",
     "firebase": "^9.6.4",
+    "mocha": "^9.2.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
