--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.3.0",
     "axios": "^0.25.0",
-    "chai": "^4.3.6",
     "firebase": "^9.6.4",
     "next": "12.0.10",
     "react": "17.0.2",
@@ -25,8 +24,11 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^8.0.2",
+    "chai": "^4.3.6",
     "cypress": "^9.4.1",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "mocha": "^9.2.0",
+    "mysql": "^2.18.1"
   }
 }
