--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@testing-library/cypress": "^8.0.2",
     "chai": "^4.3.6",
     "cypress": "^9.4.1",
+    "cypress-localstorage-commands": "^1.6.1",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "mocha": "^9.2.0",
