--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
+    "http-proxy": "^1.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
