--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -5,17 +5,15 @@ volumes:
   dbdata:
 services:
   db:
-    platform: linux/x86_64
+    container_name: quizngaged-mysql
     image: mysql
-    command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
       - dbdata:/var/lib/mysql
     ports:
-      - 3306:3306
+      - 2051:3306
     environment:      
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: appdb
       MYSQL_USER: appuser
       MYSQL_PASSWORD: password
-      MYSQP_TCP_PORT: 3306
